style: made the table more presentable and added a background image. fixed it so it doesn't show on mobile

--- a/whiskey/css/style.css
+++ b/whiskey/css/style.css
@@ -193,4 +193,41 @@ width: 160px;
     margin-top: 10px;
     color: #f05f40;
 }
-.tables-container{}
+.tables-container{ 
+     background: url(../img/whiskey-background.jpg) no-repeat bottom right fixed; 
+       
+     -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+     background-size: cover;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     position: relative;
+
+     
+     border: 1px solid #fff;
+     padding: 0;
+     text-align: center;
+     margin-bottom: 0;
+    background-color: rgba(0,0,0,0.75);
+    color: aliceblue;
+    
+}
+
+.table-frame{
+    margin: 0 auto;
+    border: 0;
+   color: aliceblue;  
+  
+}
+
+#table-gold{
+    background-color: rgba(255, 215, 0, .5);
+}
+#table-silver{
+    background-color: rgba(195, 192, 192, 0.5);
+}
+#table-bronze{
+    background-color: rgba(255,127,80, .5);
+    }
